Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
See the end for copying conditions.

* Version 1.13 (unreleased)

** doc: The idn_free function is now documented.
Suggested by "Sisyphus" <sisyphus1@optusnet.com.au>.

* Version 1.12 (released 2009-01-23)

** idn: New parameter --no-tld to deprecate the old parameter --tld.
The new parameter --no-tld disable TLD checking of the input string.
The --tld parameter was broken; it behaved opposite to its documented
behaviour.  To avoid confusion over what --tld means, we decided to
deprecate it.  Now --tld is not printed in the idn --help output, but
will continue to work as before.

** doc: Modernize doxygen configuration.

** doc: Change license on the manual to GFDLv1.3+.

** doc: Improve JavaDoc output.

** Update gnulib files and translations.

** Build with more warnings.

** API and ABI is backwards compatible with the previous version.

* Version 1.11 (released 2008-10-28)

** libidn: New WARN_CFLAGS configure variable.
It is used internally to add -Werror and other warnings flags, to
catch coding mistakes before releases.

** Win32: Perl is no longer required to build Libidn in Visual Studio.

** Win32: Functions in idna.h are also exported.
Reported by Adam Strzelecki <adam.strzelecki@java.pl>.

** doc: Included cyclomatic code complexity charts of the library code.
See doc/cyclo/.

** tests: Add more self-tests to get more self-test code coverage.

** tests: New 'make coverage' command to generate code coverage reports.
The output is created in doc/coverage/.  Requires the LCOV tools.  See
http://www.gnu.org/software/libidn/coverage/ for a pre-generated copy.

** Clarify copyright and license for gdoc, man pages, and C# port.

** Update gnulib files and translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.10 (released 2008-08-27)
