@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 1.13 (unreleased)
 
+** libidn: Use a LD version script.
+
 ** doc: The idn_free function is now documented.
 Suggested by "Sisyphus" <sisyphus1@optusnet.com.au>.
 
